--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/first-step-service-creation/first-step-service-creation.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/first-step-service-creation/first-step-service-creation.component.scss
@@ -6,9 +6,20 @@ form {
   display: flex;
   flex-direction: column;
   width: 66%;
+  h3 {
+    font-family: Source Sans Pro, sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 23px;
+    color: #323c47;
+  }
 }
 
 form::ng-deep {
+  * {
+    font-family: "Source Sans Pro", sans-serif;
+  }
   .mat-placeholder-required.mat-form-field-required-marker.ng-star-inserted {
     display: none !important;
   }
@@ -16,68 +27,300 @@ form::ng-deep {
   .mat-form-field-subscript-wrapper {
     padding: 0;
   }
-
+  .mat-form-field-outline-thick {
+    div {
+      color: rgba(0, 0, 0, 0.1);
+      border-width: 0px;
+    }
+  }
   h5 {
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: "Source Sans Pro", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    color: #323c47;
+    text-transform: uppercase;
+    margin: 0 0 13px;
+  }
+  .mat-form-field-infix {
+    border: none;
+    padding: 0;
+  }
+  .mat-form-field-invalid .mat-input-element {
+    caret-color: #323c47;
+  }
+  .mat-form-field-outline:first-of-type {
+    color: #dce0e6;
+    & + div div {
+      color: #dce0e6;
+      border-width: 1px;
+    }
+  }
+  textarea {
+    height: 60px;
+    resize: none;
+    margin: 15px 10px 5px;
+  }
+
+  ngb-popover-window {
+    &.popover {
+      background: #ffffff;
+      box-shadow: 0px 15px 21px rgba(128, 152, 213, 0.5);
+      border-radius: 8px;
+      padding: 18px 23px 19px 28px;
+      left: 14px !important;
+      top: -5px !important;
+      z-index: 2;
+      max-width: 323px;
+
+      &:before {
+        content: "";
+        position: absolute;
+        left: -9px;
+        top: 8px;
+        width: 22px;
+        height: 22px;
+        background: #ffffff;
+        -webkit-transform: rotate(47deg);
+        transform: rotate(47deg);
+        box-sizing: border-box;
+        z-index: -1;
+      }
+
+      h3 {
+        font-family: "Source Sans Pro", sans-serif;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 18px;
+        color: #000000;
+        margin: 0 0 12px;
+      }
+
+      .popover-body {
+        margin: 0;
+        font-family: "Source Sans Pro", sans-serif;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 18px;
+
+        color: #707683;
+      }
+    }
+    &.popover-select {
+      top: 25px !important;
+    }
+  }
+  .service-selects {
+    .mat-form-field-infix {
+      border-top: none;
+    }
+    .mat-form-field-appearance-outline .mat-form-field-flex {
+      padding-left: 16px;
+    }
+  }
+
+  .service-selects {
+    .mat-form-field {
+      &.mat-form-field-appearance-outline .mat-select-arrow-wrapper {
+        transform: none;
+      }
+      .mat-select-arrow {
+        border: none;
+        width: 24px;
+        height: 24px;
+        // background: #000;
+        position: relative;
+        &:before {
+          content: "";
+          position: absolute;
+          width: 30%;
+          height: 30%;
+          border-bottom: 2px solid #000;
+          border-left: 2px solid #000;
+          transform: rotate(-45deg) translateY(50%);
+        }
+      }
+      width: 100%;
+      // &.mat-form-field-appearance-outline.mat-form-field-invalid.mat-form-field-invalid .mat-form-field-outline-thick {
+      //   // color: #f44336;
+      //   div {
+      //     // color: #f44336;
+      //   }
+      // }
+      .mat-form-field-outline:first-of-type {
+        box-shadow: 0px 10px 16px rgba(128, 152, 213, 0.1);
+        div {
+          border-color: rgba(220, 224, 230, 0.1);
+        }
+      }
+      .mat-form-field-outline-thick {
+        div {
+          border-width: 1px;
+          color: rgba(220, 224, 230, 0.1);
+          box-shadow: 0px 10px 16px rgba(128, 152, 213, 0.1);
+        }
+      }
+      .mat-form-field-infix {
+        padding: 15px 0 10px 0;
+      }
+      .ng-star-inserted {
+        // font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 21px;
+        color: #323c47;
+        &.mat-error {
+          color: #f44336;
+        }
+      }
+
+      mat-select {
+        // border: 1px solid rgba(220, 224, 230, 0.1);
+        //
+        border-radius: 3px;
+        font-size: 16px;
+        line-height: 21px;
+        /* identical to box height, or 131% */
+
+        color: #323c47;
+      }
+    }
+  }
+  .tags {
+    mat-form-field {
+      width: 100%;
+    }
+  }
+
+
+}
+::ng-deep .cdk-overlay-container {
+  .mat-option {
+    font-family: Source Sans Pro, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
-    line-height: 20px;
-    scale: 1 !important;
-    font-variant: small-caps;
-    color: #323C47;
-    margin: 0 0 13px;
+    line-height: 21px;
+    /* identical to box height, or 131% */
+
+    color: #707683;
   }
-
-  textarea {
-    height: 75px;
-    resize: none;
+  .mat-option:hover:not(.mat-option-disabled),
+  .mat-option:focus:not(.mat-option-disabled) {
+    background: #3c7eea;
+    color: #fff;
   }
-
-  ngb-popover-window.popover {
-    background: #FFFFFF;
-    box-shadow: 0px 15px 21px rgba(128, 152, 213, 0.5);
-    border-radius: 8px;
-    padding: 18px 23px 19px 28px;
-    left: 14px !important;
-    top: -23px !important;
-    z-index: 2;
-    max-width: 323px;
-
-    &:before {
-      content: '';
-      position: absolute;
-      left: -9px;
-      top: 6px;
-      width: 22px;
-      height: 22px;
-      background: #FFFFFF;
-      -webkit-transform: rotate(47deg);
-      transform: rotate(47deg);
-      box-sizing: border-box;
-      z-index: -1;
-    }
-
-    h3 {
-      font-family: 'Source Sans Pro', sans-serif;
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 18px;
-      color: #000000;
-      margin: 0 0 12px;
-    }
-
-    .popover-body {
-      margin: 0;
-      font-family: 'Source Sans Pro', sans-serif;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 14px;
-      line-height: 18px;
-
-      color: #707683;
-    }
+  .mat-select-panel .mat-option.mat-selected:not(.mat-option-multiple) {
+    // bg selected
+  }
+  .mat-primary .mat-option.mat-selected:not(.mat-option-disabled) {
+    color: #323c47;
   }
 }
 
-// .service-title {}
+.service-selects {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 23px 0;
+  & > div {
+    width: 46.6%;
+  }
+  h5 {
+    font-family: "Source Sans Pro", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+    color: #323c47;
+  }
+}
+
+// ---------------------------file upload form ---------------------------
+// .portfolio {
+//   // display: flex;
+//   // flex-direction: row;
+//   // flex-wrap: wrap;
+
+// }
+// .load {
+
+// }
+.items {
+  display: flex;
+  flex-wrap: wrap;
+  img {
+    margin-right: 3%;
+    margin-bottom: 20px;
+    &:nth-child(3n + 3){
+      margin-right: 0;
+    }
+  }
+  img + .dr-dp {
+    width: 198px;
+    height: 198px;
+  }
+
+}
+.dr-dp {
+  text-align: center;
+  font-family: Source Sans Pro, sans-serif;
+  margin-bottom: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+    height: 213px;
+    border: 1px dashed #dce0e6;
+  object {
+    fill: red;
+  }
+  span {
+    display: block;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 18px;
+    /* identical to box height */
+    text-align: center;
+    color: #33596e;
+
+    &:first-of-type {
+      font-style: normal;
+      font-weight: bold;
+      font-size: 14px;
+      line-height: 18px;
+      /* identical to box height */
+      letter-spacing: -0.0841176px;
+      margin-bottom: 7px;
+    }
+  }
+}
+.portfolio {
+  img {
+    width: 198px;
+    height: 198px;
+    border: 2px dashed #DCE0E6;
+  }
+}
+.input-file {
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
+  & + label {
+    cursor: pointer;
+    font-family: Source Sans Pro, sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 33px;
+    text-align: center;
+    color: #3c7eea;
+  }
+
+}
