--- a/src/app/catalog-page/catalog/filter/filter.component.html
+++ b/src/app/catalog-page/catalog/filter/filter.component.html
@@ -1,1 +1,23 @@
 <p>filter works!</p>
+<div class="wrapper">
+  <div class="filters-list">
+    <div class="filter f-price">
+      <div class="title">
+        <p>бюджет</p>
+        <div class="plus"></div>
+      </div>
+      <div class="filter price">
+        <div>
+          <label for="price-mn"></label>
+          <!-- <input [(ngModel)]="filterData" (ngModelChange)="onFilterChange()" type="text" name="price-min" -->
+            <!-- id="price-mn" /> -->
+        </div>
+        <div>
+          <label for="price-mx"></label>
+          <!-- <input [(ngModel)]="carFilter.Price_max" (ngModelChange)="onFilterChange()" type="text" name="price-max" -->
+            <!-- id="price-mx" /> -->
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
