servise form buttons

--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/first-step-service-creation/first-step-service-creation.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/first-step-service-creation/first-step-service-creation.component.scss
@@ -267,7 +267,7 @@ form::ng-deep {
 .dr-dp {
   text-align: center;
   font-family: Source Sans Pro, sans-serif;
-  margin-bottom: 16px;
+  margin-bottom: 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -322,5 +322,12 @@ form::ng-deep {
     text-align: center;
     color: #3c7eea;
   }
+
+}
+
+
+// -----------------buttons ----------------------//
+
+.form-butons {
 
 }
