--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/first-step-service-creation/first-step-service-creation.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/first-step-service-creation/first-step-service-creation.component.html
@@ -133,5 +133,10 @@
         </div>
       </div>
     </div>
+    <div class="form-butons">
+      <button class="back">сохранить и выйти</button>
+      <button class="save">сохранить и продолжить</button>
+    </div>
+    
   </form>
 </div>
