--- a/src/app/catalog-page/catalog/filter/filter.component.html
+++ b/src/app/catalog-page/catalog/filter/filter.component.html
@@ -9,13 +9,13 @@
       <div class="filter price">
         <div>
           <label for="price-mn"></label>
-          <!-- <input [(ngModel)]="filterData" (ngModelChange)="onFilterChange()" type="text" name="price-min" -->
-            <!-- id="price-mn" /> -->
+          <input [(ngModel)]="filterData.Price" (ngModelChange)="onFilterChange()" type="text" name="price-min"
+            id="price-mn" />
         </div>
         <div>
           <label for="price-mx"></label>
-          <!-- <input [(ngModel)]="carFilter.Price_max" (ngModelChange)="onFilterChange()" type="text" name="price-max" -->
-            <!-- id="price-mx" /> -->
+          <input [(ngModel)]="filterData.Price_max" (ngModelChange)="onFilterChange()" type="text" name="price-max"
+            id="price-mx" />
         </div>
       </div>
     </div>
