--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/first-step-service-creation/first-step-service-creation.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/first-step-service-creation/first-step-service-creation.component.scss
@@ -6,6 +6,7 @@ form {
   display: flex;
   flex-direction: column;
   width: 66%;
+
   h3 {
     font-family: Source Sans Pro, sans-serif;
     font-style: normal;
@@ -20,6 +21,7 @@ form::ng-deep {
   * {
     font-family: "Source Sans Pro", sans-serif;
   }
+
   .mat-placeholder-required.mat-form-field-required-marker.ng-star-inserted {
     display: none !important;
   }
@@ -27,12 +29,14 @@ form::ng-deep {
   .mat-form-field-subscript-wrapper {
     padding: 0;
   }
+
   .mat-form-field-outline-thick {
     div {
       color: rgba(0, 0, 0, 0.1);
       border-width: 0px;
     }
   }
+
   h5 {
     font-family: "Source Sans Pro", sans-serif;
     font-style: normal;
@@ -43,20 +47,25 @@ form::ng-deep {
     text-transform: uppercase;
     margin: 0 0 13px;
   }
+
   .mat-form-field-infix {
     border: none;
     padding: 0;
   }
+
   .mat-form-field-invalid .mat-input-element {
     caret-color: #323c47;
   }
+
   .mat-form-field-outline:first-of-type {
     color: #dce0e6;
-    & + div div {
+
+    &+div div {
       color: #dce0e6;
       border-width: 1px;
     }
   }
+
   textarea {
     height: 60px;
     resize: none;
@@ -108,14 +117,17 @@ form::ng-deep {
         color: #707683;
       }
     }
+
     &.popover-select {
       top: 25px !important;
     }
   }
+
   .service-selects {
     .mat-form-field-infix {
       border-top: none;
     }
+
     .mat-form-field-appearance-outline .mat-form-field-flex {
       padding-left: 16px;
     }
@@ -126,12 +138,14 @@ form::ng-deep {
       &.mat-form-field-appearance-outline .mat-select-arrow-wrapper {
         transform: none;
       }
+
       .mat-select-arrow {
         border: none;
         width: 24px;
         height: 24px;
         // background: #000;
         position: relative;
+
         &:before {
           content: "";
           position: absolute;
@@ -142,7 +156,9 @@ form::ng-deep {
           transform: rotate(-45deg) translateY(50%);
         }
       }
+
       width: 100%;
+
       // &.mat-form-field-appearance-outline.mat-form-field-invalid.mat-form-field-invalid .mat-form-field-outline-thick {
       //   // color: #f44336;
       //   div {
@@ -151,10 +167,12 @@ form::ng-deep {
       // }
       .mat-form-field-outline:first-of-type {
         box-shadow: 0px 10px 16px rgba(128, 152, 213, 0.1);
+
         div {
           border-color: rgba(220, 224, 230, 0.1);
         }
       }
+
       .mat-form-field-outline-thick {
         div {
           border-width: 1px;
@@ -162,15 +180,18 @@ form::ng-deep {
           box-shadow: 0px 10px 16px rgba(128, 152, 213, 0.1);
         }
       }
+
       .mat-form-field-infix {
         padding: 15px 0 10px 0;
       }
+
       .ng-star-inserted {
         // font-style: normal;
         font-weight: 400;
         font-size: 14px;
         line-height: 21px;
         color: #323c47;
+
         &.mat-error {
           color: #f44336;
         }
@@ -188,6 +209,7 @@ form::ng-deep {
       }
     }
   }
+
   .tags {
     mat-form-field {
       width: 100%;
@@ -196,6 +218,7 @@ form::ng-deep {
 
 
 }
+
 ::ng-deep .cdk-overlay-container {
   .mat-option {
     font-family: Source Sans Pro, sans-serif;
@@ -207,14 +230,17 @@ form::ng-deep {
 
     color: #707683;
   }
+
   .mat-option:hover:not(.mat-option-disabled),
   .mat-option:focus:not(.mat-option-disabled) {
     background: #3c7eea;
     color: #fff;
   }
+
   .mat-select-panel .mat-option.mat-selected:not(.mat-option-multiple) {
     // bg selected
   }
+
   .mat-primary .mat-option.mat-selected:not(.mat-option-disabled) {
     color: #323c47;
   }
@@ -225,9 +251,11 @@ form::ng-deep {
   flex-direction: row;
   justify-content: space-between;
   margin: 23px 0;
-  & > div {
+
+  &>div {
     width: 46.6%;
   }
+
   h5 {
     font-family: "Source Sans Pro", sans-serif;
     font-style: normal;
@@ -251,19 +279,23 @@ form::ng-deep {
 .items {
   display: flex;
   flex-wrap: wrap;
+
   img {
     margin-right: 3%;
     margin-bottom: 20px;
-    &:nth-child(3n + 3){
+
+    &:nth-child(3n + 3) {
       margin-right: 0;
     }
   }
-  img + .dr-dp {
+
+  img+.dr-dp {
     width: 198px;
     height: 198px;
   }
 
 }
+
 .dr-dp {
   text-align: center;
   font-family: Source Sans Pro, sans-serif;
@@ -272,11 +304,13 @@ form::ng-deep {
   flex-direction: column;
   justify-content: center;
   width: 100%;
-    height: 213px;
-    border: 1px dashed #dce0e6;
+  height: 213px;
+  border: 1px dashed #dce0e6;
+
   object {
     fill: red;
   }
+
   span {
     display: block;
     font-style: normal;
@@ -298,6 +332,7 @@ form::ng-deep {
     }
   }
 }
+
 .portfolio {
   img {
     width: 198px;
@@ -305,6 +340,7 @@ form::ng-deep {
     border: 2px dashed #DCE0E6;
   }
 }
+
 .input-file {
   width: 0.1px;
   height: 0.1px;
@@ -312,7 +348,8 @@ form::ng-deep {
   overflow: hidden;
   position: absolute;
   z-index: -1;
-  & + label {
+
+  &+label {
     cursor: pointer;
     font-family: Source Sans Pro, sans-serif;
     font-style: normal;
@@ -329,5 +366,41 @@ form::ng-deep {
 // -----------------buttons ----------------------//
 
 .form-butons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 
+  button {
+    font-family: Source Sans Pro, sans-serif;
+    border: none;
+    border-radius: 4px;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 18px;
+    // color: #4285F4;
+    padding: 15px 24px;
+    cursor: pointer;
+
+    &:first-of-type {
+      border: 1px solid #4285F4;
+      background: #fff;
+      color: #4285F4;
+      box-shadow: none;
+      &:hover {
+        color: #fff;
+        background: #3C7EEA;
+        box-shadow: 0px 2px 4px rgba(60, 9, 179, 0.3);
+      }
+    }
+
+    color: #fff;
+    background: #3C7EEA;
+    box-shadow: 0px 2px 4px rgba(60, 9, 179, 0.3);
+    &:hover {
+      border: 1px solid #4285F4;
+      background: #fff;
+      color: #4285F4;
+      box-shadow: none;
+    }
+  }
 }
