--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/create-service.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/create-service.component.html
@@ -41,6 +41,7 @@
   </div>
   <div class="step-detail">
     <app-first-step-service-creation></app-first-step-service-creation>
+    <!-- <app-second-step-creation></app-second-step-creation> -->
     <!-- <div>2</div>
     <div>3</div>
     <div>4</div>
