--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/first-step-service-creation/first-step-service-creation.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/first-step-service-creation/first-step-service-creation.component.scss
@@ -1,5 +1,6 @@
 h3 {
   margin-bottom: 19px;
+  margin-top: 0;
 }
 
 form {
@@ -120,6 +121,9 @@ form::ng-deep {
 
     &.popover-select {
       top: 25px !important;
+    }
+    &.popover-file {
+      top: -43px !important;
     }
   }
 
@@ -283,7 +287,7 @@ form::ng-deep {
   img {
     margin-right: 3%;
     margin-bottom: 20px;
-
+    object-fit: contain;
     &:nth-child(3n + 3) {
       margin-right: 0;
     }
@@ -306,7 +310,8 @@ form::ng-deep {
   width: 100%;
   height: 213px;
   border: 1px dashed #dce0e6;
-
+  position: relative;
+  z-index: 2;
   object {
     fill: red;
   }
@@ -374,12 +379,13 @@ form::ng-deep {
     font-family: Source Sans Pro, sans-serif;
     border: none;
     border-radius: 4px;
-    font-weight: 600;
+    font-weight: 700;
     font-size: 14px;
     line-height: 18px;
     // color: #4285F4;
     padding: 15px 24px;
     cursor: pointer;
+    text-transform: uppercase;
 
     &:first-of-type {
       border: 1px solid #4285F4;
