--- a/src/app/catalog-page/catalog/items/items.component.html
+++ b/src/app/catalog-page/catalog/items/items.component.html
@@ -1,7 +1,7 @@
 
 <div class="wrapper">
   <div class="cards-list" *ngIf="offersList">
-    <div class="card" *ngFor="let offer of offersList">
+    <div class="card" *ngFor="let offer of offersList.data">
       <div class="card-preview__bg">
         <img class="card-preview" src="/assets/images/preview.png">
       </div>
