--- a/src/app/catalog-page/catalog/filter/filter.component.html
+++ b/src/app/catalog-page/catalog/filter/filter.component.html
@@ -1,42 +1,77 @@
 <div class="wrapper">
   <div class="filters-list">
-    <div class="filter f-price">
+    <div class="filter-item f-price">
       <div class="title">
-        <p>бюджет</p>
+        <p>Бюджет</p>
         <div class="plus"></div>
       </div>
-      <div class="filter price">
-        <div>
-          <label for="price-mn"></label>
-          <mat-form-field>
-            <input
-              matInput
-              number
-              placeholder="UAH"
-              [(ngModel)]="filterData.price"
-              (ngModelChange)="onFilterChange()"
-              type="text"
-              name="price-min"
-              id="price-mn"
-              >
-          </mat-form-field>
+      <div class="filter price open">
+        <div class="filter-section">
+          <label for="price-mn">От</label>
+          <input
+            class="inputs"
+            matInput
+            number
+            placeholder="UAH"
+            [(ngModel)]="filterData.price"
+            (ngModelChange)="onFilterChange()"
+            type="text"
+            name="price-min"
+            id="price-mn"
+            >
         </div>
-        <div>
-          <label for="price-mx"></label>
-          <mat-form-field>
-            <input
-              matInput
-              number
-              placeholder="UAH"
-              [(ngModel)]="filterData.Price_max"
-              (ngModelChange)="onFilterChange()"
-              type="text"
-              name="price-max"
-              id="price-mx"
-              >
-          </mat-form-field>
+        <div class="filter-section">
+          <label for="price-mx">До</label>
+          <input
+            class="inputs"
+            matInput
+            number
+            placeholder="UAH"
+            [(ngModel)]="filterData.Price_max"
+            (ngModelChange)="onFilterChange()"
+            type="text"
+            name="price-max"
+            id="price-mx"
+            >
         </div>
       </div>
+    </div>
+    <!-- <div class="filter-item f-term open">
+      <div class="title">
+        <p>Срок выполнения</p>
+        <div class="plus"></div>
+      </div>
+      <div class="filter term">
+        <mat-form-field>
+          <mat-label></mat-label>
+          <mat-select [(ngModel)]="filterData.term" (ngModelChange)="onFilterChange()">
+            <mat-option value="">None</mat-option>
+            <mat-option value="1" >Экспресс за 24 часа</mat-option>
+            <mat-option value="3" >До 3 дней</mat-option>
+            <mat-option value="7" >До 7 дней</mat-option>
+            <mat-option value="30">До месяца</mat-option>
+            <mat-option value="99">Любое время</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+    </div> -->
+    <div class="filter-item f-term open">
+      <div class="title">
+        <mat-form-field>
+          <mat-label>Срок выполнения</mat-label>
+          <mat-select [(ngModel)]="filterData.term" (ngModelChange)="onFilterChange()">
+            <mat-option value="">None</mat-option>
+            <mat-option value="1" >Экспресс за 24 часа</mat-option>
+            <mat-option value="3" >До 3 дней</mat-option>
+            <mat-option value="7" >До 7 дней</mat-option>
+            <mat-option value="30">До месяца</mat-option>
+            <mat-option value="99">Любое время</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+      <!-- <div class="filter term">
+
+      </div> -->
     </div>
     <div class="set-filter-btn" (click)="loadData()">
       <span>фильтровать</span>
