--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/create-service.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/create-service.component.html
@@ -40,7 +40,8 @@
     </div>
   </div>
   <div class="step-detail">
-    <app-first-step-service-creation></app-first-step-service-creation>
+    <router-outlet></router-outlet>
+    <!-- <app-first-step-service-creation></app-first-step-service-creation> -->
     <!-- <app-second-step-creation></app-second-step-creation> -->
     <!-- <div>2</div>
     <div>3</div>
