--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/second-step-creation/second-step-creation.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/second-step-creation/second-step-creation.component.html
@@ -1,11 +1,11 @@
 <div class="step-wrapper">
-  <form #form="ngForm" [formGroup]="firstStepForm" (ngSubmit)="registrate()">
+  <!-- <form #form="ngForm" [formGroup]="firstStepForm" (ngSubmit)="registrate()">
     <h3>2. Описание услуги</h3>
     <h5>Опишите услугу как можно подробнее</h5>
     <div class="area-styling">
       button*3
-    </div>
-    <mat-form-field
+    </div> -->
+    <!-- <mat-form-field
       floatLabel="always"
       class="service-title"
       appearance="outline"
@@ -28,10 +28,10 @@
       <mat-hint align="end"
         >{{ serviceTit.value.length }} из 100 минимум</mat-hint
       >
-    </mat-form-field>
-    <div class="form-butons">
+    </mat-form-field> -->
+    <!-- <div class="form-butons"> -->
         <button class="back">сохранить и выйти</button>
         <button class="save">сохранить и продолжить</button>
-      </div>
-  </form>
+      <!-- </div> -->
+  <!-- </form> -->
 </div>
