--- a/src/app/catalog-page/catalog/filter/filter.component.html
+++ b/src/app/catalog-page/catalog/filter/filter.component.html
@@ -3,9 +3,9 @@
     <div class="filter-item f-price">
       <div class="title">
         <p>Бюджет</p>
-        <div class="plus"></div>
+        <div class="btn-show-full" (click)="showFullFilter()" [ngClass]="fliterOpen? 'open': ''"></div>
       </div>
-      <div class="filter price open">
+      <div class="filter price" [ngClass]="fliterOpen? 'open': ''">
         <div class="filter-section">
           <label for="price-mn">От</label>
           <input
@@ -27,7 +27,7 @@
             matInput
             number
             placeholder="UAH"
-            [(ngModel)]="filterData.Price_max"
+            [(ngModel)]="filterData.price_max"
             (ngModelChange)="onFilterChange()"
             type="text"
             name="price-max"
@@ -36,26 +36,7 @@
         </div>
       </div>
     </div>
-    <!-- <div class="filter-item f-term open">
-      <div class="title">
-        <p>Срок выполнения</p>
-        <div class="plus"></div>
-      </div>
-      <div class="filter term">
-        <mat-form-field>
-          <mat-label></mat-label>
-          <mat-select [(ngModel)]="filterData.term" (ngModelChange)="onFilterChange()">
-            <mat-option value="">None</mat-option>
-            <mat-option value="1" >Экспресс за 24 часа</mat-option>
-            <mat-option value="3" >До 3 дней</mat-option>
-            <mat-option value="7" >До 7 дней</mat-option>
-            <mat-option value="30">До месяца</mat-option>
-            <mat-option value="99">Любое время</mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
-    </div> -->
-    <div class="filter-item f-term open">
+    <div class="filter-item f-term">
       <div class="title">
         <mat-form-field>
           <mat-label>Срок выполнения</mat-label>
