--- a/src/app/catalog-page/catalog/filter/filter.component.scss
+++ b/src/app/catalog-page/catalog/filter/filter.component.scss
@@ -17,9 +17,10 @@
   width: 214px;
   margin-right: 40px;
   .title{
+    position: relative;
     p{
      margin: 0;
-     padding: 15px 20px;
+     padding: 22px 20px;
      font-family: "Source Sans Pro";
      font-style: normal;
      font-weight: normal;
@@ -27,35 +28,68 @@
      line-height: 21px;
      color: #323C47;
     }
-
+    .btn-show-full{
+      display: block;
+      width: 12px;
+      height: 8px;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%) rotate(180deg);
+      right: 26px;
+      background-image: url('/assets/images/icons/arrow.png');
+      cursor: pointer;
+      transition: transform .3s;
+      &.open{
+        transform: translateY(-50%) rotate(0);
+      }
+    }
   }
   .filter{
     height: 1px;
+    width: 100%;
     overflow: hidden;
-    transition: all .5s;
-    &.open{
-      background: #FFFFFF;
-      border: 1px solid rgba(220, 224, 230, 0.1);
-      box-shadow: 0px 10px 16px rgba(128, 152, 213, 0.2);
-      border-radius: 3px;
+    transition: all .3s;
 
-      height: 90px;
-      padding-top: 10px;
-      box-sizing: border-box;
-      overflow: hidden;
-      transition: all 0.5s;
-      position: absolute;
-      left: 0;
-      bottom: calc(-100% - 50px);
-      background: #fff;
+    background: #FFFFFF;
+    border: 1px solid rgba(220, 224, 230, 0.1);
+    box-sizing: border-box;
+    box-shadow: 0px 10px 16px rgba(128, 152, 213, 0.2);
+    border-radius: 3px;
+
+    height: 90px;
+    padding-top: 10px;
+    overflow: hidden;
+    transition: all 0.5s;
+    position: absolute;
+    left: 0;
+
+    bottom: 0;
+    opacity: 0;
+    z-index: -1;
+    &.open{
+      bottom: calc(-100% - 35px);
+      opacity: 1;
       z-index: 9;
     }
   }
   .price{
     display: flex;
+    justify-content: space-between;
     .filter-section{
       width: 80px;
       padding: 0 10px;
+      position: relative;
+      &:first-child{
+        &::before{
+          content: "";
+          position: absolute;
+          top: 62%;
+          right: -10px;
+          height: 1px;
+          width: 8px;
+          background-color: #111;
+        }
+      }
     }
     label{
       font-family: "Source Sans Pro";
