--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/first-step-service-creation/first-step-service-creation.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/first-step-service-creation/first-step-service-creation.component.html
@@ -3,149 +3,80 @@
     <h3>1. Титульная информация</h3>
 
     <h5>Название услуги</h5>
-    <mat-form-field
-      floatLabel="always"
-      class="service-title"
-      appearance="outline"
-      maxlength="70"
-      ngbPopover="Оно должно отражать суть вашего предложения
-    и описывать услугу, которую вы готовы выполнить."
-      triggers="mouseenter:mouseleave"
-      popoverTitle="Введите название услуги"
-      placement="right"
-      popoverClass="popover"
-      closeDelay="200"
-    >
-      <textarea
-        #serviceTit
-        formControlName="userService.name"
-        [(ngModel)]="userService.name"
-        matInput
-        required
-        maxlength="70"
-      ></textarea>
+    <mat-form-field floatLabel="always" class="service-title" appearance="outline" maxlength="70" ngbPopover="Оно должно отражать суть вашего предложения
+    и описывать услугу, которую вы готовы выполнить." triggers="mouseenter:mouseleave"
+      popoverTitle="Введите название услуги" placement="right" popoverClass="popover" closeDelay="200">
+      <textarea #serviceTit formControlName="name" [(ngModel)]="userService.name" matInput required
+        maxlength="70"></textarea>
 
-      <mat-hint align="end"
-        >{{ serviceTit.value.length }} из 70 максимально</mat-hint
-      >
+      <mat-hint align="end">{{ serviceTit.value.length }} из 70 максимально</mat-hint>
     </mat-form-field>
-    <!--
     <div class="service-selects">
       <div class="category">
         <h5>Категория Вашей деятельности</h5>
-        <mat-form-field
-          appearance="outline"
-          *ngIf="categories"
-          ngbPopover="Это позволит покупателям быстро найти Вашу услугу."
-          triggers="mouseenter:mouseleave"
-          popoverTitle="Выберите категорию, наиболее подходящую для Вашей услуги"
-          placement="right"
-          popoverClass="popover-select"
-          closeDelay="200"
-        >
-          <mat-select
-            (ngModelChange)="onFiltersChange()"
-            formControlName="category"
-            [(ngModel)]="userServiceForm.category"
-            required
-          >
-            <mat-option
-              *ngFor="let category of categories"
-              [value]="category.link"
-            >
+        <mat-form-field appearance="outline" ngbPopover="Это позволит покупателям быстро найти Вашу услугу."
+          triggers="mouseenter:mouseleave" popoverTitle="Выберите категорию, наиболее подходящую для Вашей услуги"
+          placement="right" popoverClass="popover-select" closeDelay="200">
+          <mat-select (ngModelChange)="onFiltersChange()" formControlName="category" [(ngModel)]="userService.category"
+            required>
+            <mat-option *ngFor="let category of categories" [value]="category.link">
               {{ category.name }}
             </mat-option>
           </mat-select>
         </mat-form-field>
       </div>
 
-      <div class="sucat" *ngIf="firstStepForm.value.category">
+      <div class="sucat" *ngIf="userService.category">
         <h5>Подкатегория Вашей деятельности</h5>
-        <mat-form-field
-          appearance="outline"
-          ngbPopover="Это позволит покупателям быстро найти Вашу услугу."
-          triggers="mouseenter:mouseleave"
-          popoverTitle="Выберите подкатегорию, наиболее подходящую для Вашей услуги"
-          placement="right"
-          popoverClass="popover-select"
-          closeDelay="20000"
-        >
-          <mat-select
-            #serviceSubCategory
-            formControlName="subcategory"
-            required
-            [(ngModel)]="userServiceForm.subcategory"
-          >
-            <mat-option
-              *ngFor="let subcategory of sub_categories"
-              [value]="subcategory.link"
-            >
+        <mat-form-field appearance="outline" ngbPopover="Это позволит покупателям быстро найти Вашу услугу."
+          triggers="mouseenter:mouseleave" popoverTitle="Выберите подкатегорию, наиболее подходящую для Вашей услуги"
+          placement="right" popoverClass="popover-select" closeDelay="20000">
+          <mat-select formControlName="subCategory" required [(ngModel)]="userService.subCategory">
+            <mat-option *ngFor="let subcategory of sub_categories" [value]="subcategory.link">
               {{ subcategory.name }}
             </mat-option>
           </mat-select>
-          <mat-error
-            *ngIf="firstStepForm.get('subcategory').hasError('required')"
-            >{{ "Выберите подкатегорию" }}</mat-error
-          >
+          <mat-error *ngIf="firstStepForm.get('subCategory').hasError('required')">{{ "Выберите подкатегорию" }}
+          </mat-error>
         </mat-form-field>
       </div>
     </div>
+
     <div class="tags">
       <h5>Ключевые слова для поиска вашей услуги</h5>
-      <mat-form-field
-        appearance="outline"
-        ngbPopover="Это поможет заказчикам найти Вас во время поиска."
-        triggers="mouseenter:mouseleave"
-        popoverTitle="Введите теги"
-        placement="right"
-        popoverClass="popover"
-        closeDelay="200"
-      >
-        <textarea
-          #serviceTitle
-          formControlName="userServiceForm.tags"
-          [(ngModel)]="userServiceForm.tags"
-          matInput
-          required
-          placeholder="Поисковые теги"
-        ></textarea>
+      <mat-form-field appearance="outline" ngbPopover="Это поможет заказчикам найти Вас во время поиска."
+        triggers="mouseenter:mouseleave" popoverTitle="Введите теги" placement="right" popoverClass="popover"
+        closeDelay="200">
+        <textarea #serviceTitle formControlName="tags" [(ngModel)]="userService.tags" matInput required
+          placeholder="Поисковые теги"></textarea>
       </mat-form-field>
     </div>
+
     <div class="portfolio">
       <h5>Загрузка портфолио</h5>
 
-      <div class="items" >
+      <div class="items">
+          <ng-container *ngIf="userService.files">
+              <img *ngFor="let item of userService.files" [src]="'https://www.thecubetest.site/Backend//storage/app/' + item.file" height="300" />
+            </ng-container>
+
         <ng-container *ngIf="previewUrl">
           <img *ngFor="let ingUrl of previewUrl" [src]="ingUrl" height="300" />
         </ng-container>
 
-        <div class="dr-dp"  appDragDrop (onFileDropped)="fileProgress($event)"
-        ngbPopover="Добавьте запоминающийся контент в свою галерею, чтобы отличаться от конкурентов.
+        <div class="dr-dp" appDragDrop (onFileDropped)="fileProgress($event)" ngbPopover="Добавьте запоминающийся контент в свою галерею, чтобы отличаться от конкурентов.
         С загруженных файлов, вы можете выбрать один для титульного изображения на странице."
-          triggers="mouseenter:mouseleave"
-          popoverTitle="Загрузка портфолио"
-          placement="right"
-          popoverClass="popover-file"
-          closeDelay="20000"
-        >
-          <object
-            data="/assets/images/svg/upload.svg"
-            type="image/svg+xml"
-          ></object>
+          triggers="mouseenter:mouseleave" popoverTitle="Загрузка портфолио" placement="right"
+          popoverClass="popover-file" closeDelay="20000">
+          <object data="/assets/images/svg/upload.svg" type="image/svg+xml"></object>
           <span>.JPG .PNG .GIF </span>
           <span>Перетащите файлы или </span>
-          <input
-            type="file"
-            id="file"
-            multiple="true"
-            class="input-file"
-            #fileInput
-            (change)="fileProgress($event.target.files)"
-          />
+          <input type="file" id="file" multiple="true" class="input-file" formControlName="files"
+             #fileInput (change)="fileProgress($event.target.files)" />
           <label for="file">кликните сюда</label>
         </div>
       </div>
-    </div> -->
+    </div>
     <div class="form-butons">
       <button class="back">сохранить и выйти</button>
       <button class="save" (click)="registrate()">
