--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/my-services-home/my-services-home.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/my-services-home/my-services-home.component.html
@@ -2,6 +2,6 @@
 
 <button (click)="createNewService()">Создать услугу</button><br><br>
 
-<ng-container *ngIf="userOffers">
-  <button *ngFor="let userOffer of userOffers" (click)="openOffer(userOffer.id)">{{ userOffer.name }}</button>
+<ng-container *ngIf="userService">
+  <button *ngFor="let userOffer of userService" (click)="openOffer(userOffer.id)">{{ userOffer.name }}</button>
 </ng-container>
