--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/first-step-service-creation/first-step-service-creation.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/first-step-service-creation/first-step-service-creation.component.scss
@@ -283,17 +283,20 @@ form::ng-deep {
 .items {
   display: flex;
   flex-wrap: wrap;
-
-  img {
+  .img-item {
     margin-right: 3%;
     margin-bottom: 20px;
-    object-fit: contain;
     &:nth-child(3n + 3) {
       margin-right: 0;
     }
   }
+  img {
+    
+    object-fit: contain;
+    
+  }
 
-  img+.dr-dp {
+  .img-item +.dr-dp {
     width: 198px;
     height: 198px;
   }
