--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/first-step-service-creation/first-step-service-creation.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/first-step-service-creation/first-step-service-creation.component.html
@@ -17,9 +17,9 @@
         <mat-form-field appearance="outline" ngbPopover="Это позволит покупателям быстро найти Вашу услугу."
           triggers="mouseenter:mouseleave" popoverTitle="Выберите категорию, наиболее подходящую для Вашей услуги"
           placement="right" popoverClass="popover-select" closeDelay="200">
-          <mat-select (ngModelChange)="onFiltersChange()" formControlName="category" [(ngModel)]="userService.category"
+          <mat-select (ngModelChange)="onFiltersChange()"  formControlName="category" [(ngModel)]="userService.category"
             required>
-            <mat-option *ngFor="let category of categories" [value]="category.link">
+            <mat-option *ngFor="let category of categoryList" [value]="category.link">
               {{ category.name }}
             </mat-option>
           </mat-select>
@@ -44,29 +44,43 @@
 
     <div class="tags">
       <h5>Ключевые слова для поиска вашей услуги</h5>
-      <mat-form-field appearance="outline" ngbPopover="Это поможет заказчикам найти Вас во время поиска."
+      <!-- <mat-form-field appearance="outline" ngbPopover="Это поможет заказчикам найти Вас во время поиска."
         triggers="mouseenter:mouseleave" popoverTitle="Введите теги" placement="right" popoverClass="popover"
         closeDelay="200">
         <textarea #serviceTitle formControlName="tags" [(ngModel)]="userService.tags" matInput required
           placeholder="Поисковые теги"></textarea>
-      </mat-form-field>
+      </mat-form-field> -->
+      <mat-form-field class="example-chip-list" appearance="outline">
+          <mat-chip-list #chipList aria-label="Fruit selection">
+            <mat-chip *ngFor="let tag of tags" [selectable]="selectable" color="silver"
+                     [removable]="removable" (removed)="remove(tag)">
+              {{tag.name}}
+              <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+            </mat-chip>
+            <input
+                   [matChipInputFor]="chipList"
+                   [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                   [matChipInputAddOnBlur]="addOnBlur"
+                   (matChipInputTokenEnd)="add($event)">
+          </mat-chip-list>
+        </mat-form-field>
     </div>
 
     <div class="portfolio">
       <h5>Загрузка портфолио</h5>
 
       <div class="items">
-          <!-- <ng-container *ngIf="userService.files">
-              <img *ngFor="let item of userService.files" [src]="'https://www.thecubetest.site/Backend/storage/app/' + item.name" height="300" />
+
 
         <ng-container *ngIf="previewUrl">
-          <div class="img-item" *ngFor="let ingUrl of previewUrl, let i = index" >
-              <button class="delete-file" (click)="deleteAttachment(ingUrl.id)">
-                </button>
-              <img [src]="'https://www.thecubetest.site/Backend/storage/app/' + ingUrl.link" height="300" />
-            
+          <div class="img-item" *ngFor="let ingUrl of previewUrl, let i = index">
+            <button class="delete-file" (click)="deleteAttachment(ingUrl.id)">
+
+            </button>
+            <img [src]="'https://www.thecubetest.site/Backend/storage/app/' + ingUrl.link" height="300" />
+
           </div>
-          
+
         </ng-container>
 
         <div class="dr-dp" appDragDrop (onFileDropped)="fileProgress($event)" ngbPopover="Добавьте запоминающийся контент в свою галерею, чтобы отличаться от конкурентов.
@@ -76,8 +90,8 @@
           <object data="/assets/images/svg/upload.svg" type="image/svg+xml"></object>
           <span>.JPG .PNG .GIF </span>
           <span>Перетащите файлы или </span>
-          <input type="file" id="file" multiple="true" class="input-file" formControlName="files"
-             #fileInput (change)="fileProgress($event.target.files)" />
+          <input type="file" id="file" multiple="true" class="input-file" #fileInput
+            (change)="fileProgress($event.target.files)" />
           <label for="file">кликните сюда</label>
         </div>
       </div>
